index: fix issue where an active, pressed-down button sometimes had the wrong color

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -21,7 +21,8 @@ nav {
     white-space: nowrap;
 }
 
-.newButton {
+.newButton,
+.newButton:active {
     color: var(--cf-accent);
 }
 
